--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sneakers",
   "version": "0.1.0",
+  "homepage": "https://cl1entt.github.io/react-sneakers/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
